I fixed an overflow issue at license page.

--- a/homework.css
+++ b/homework.css
@@ -108,6 +108,9 @@ footer a {
     text-align: justify;
     font-size: large;
 }
+pre {
+    overflow: scroll;
+}
 
 .author-button {
     display: block;
